[package]
name = "kv_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
# mace = { git = "https://git.o2c.fun/abby/mace.git", branch = "task-64-1" }
mace = { path = "/home/workspace/gits/github/mace"}
clap = { version = "4.5.42", features = ["derive"] }
rand = "0.9.2"

[profile.release]
lto = true
opt-level = 3

[profile.release-with-symbol]
inherits = "release"
# debug = true
debug = "line-tables-only"
panic = "abort"
