[package]
name = "kv_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
mace-kv = "0.0.27"
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"
log = "0.4.22"
coreid = { path = "coreid" }
logger = { path = "logger" }
myalloc = { path = "heap_trace" }

[features]
default = []
custom_alloc = []

[profile.release]
lto = true
opt-level = 3
debug = true

[profile.release-with-symbol]
inherits = "release"
# debug = true
debug = "line-tables-only"
panic = "abort"
